# EDR-Test-Application

./: .gitignore
EDR-Generator/: .gitignore  Cargo.toml  README.md
EDR-Generator/examples/: unix_input.csv  windows_input.csv
EDR-Generator/src/: main.rs
EDR-Generator/src/modules/: commander.rs  common.rs  file_system.rs  logger.rs  mod.rs  network.rs  process.rs
EDR-Generator/tests/: bad_test.csv  good_test.csv
