[package]
name = "edr_generator"
version = "0.1.0"
authors = ["x24git <23037854+x24git@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.17.0"
shlex = "1.0.0"
rand = "0.8.3"
csv = "1.1.6"
serde = {version = "1.0.125", features = ["derive"]}
whoami = "1.1.2"
chrono = "0.4.19"
clap = "2.33.3"